# drone-system

./: .env-example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.infrastructure.yml  docker-compose.local.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  traefik.yml
backend/: .gitignore  README.md  dockerfile  pyproject.toml
backend/app/: alembic.ini  main.py
backend/app/alembic/: env.py
backend/app/api/: main.py
backend/app/api/routes/: gonets.py  message.py
backend/app/background/: beat.py  main.py  worker.py
backend/app/background/tasks/: gonets.py
backend/app/core/: __init__.py  database.py  settings.py
backend/app/core/db/: __init__.py  async_database.py  base.py  database.py  sync_database.py
backend/app/core/db/message/: crud.py  model.py
backend/app/gonets/: README.md  __init__.py  arequests.py  captcha_solver.py  http_parse.py  main.py  models.py  parser.py  tasks.py
backend/app/gonets/repositories/: __init__.py  interface.py  repository.py
backend/app/gonets/schemas/: gonets.py
backend/app/gonets/utils/: captcha_solver.py  helpers.py  http_parse.py
backend/app/message/: dependence.py
backend/app/message/models/: message.py
backend/app/message/repositories/: __init__.py  interface.py  repository.py
backend/app/message/schemas/: __init__.py  message.py
backend/app/message/services/: __init__.py  interface.py  service.py
backend/app/schemas/: gonets.py  message.py
backend/app/server/: main.py
backend/app/server/gonets/: README.md  parser.py
backend/system/: __init__.py  main.py
backend/system/server/: main.py
backend/system/server/mqtt/: client.py
infrastructure/mosquitto/: mosquitto.conf
infrastructure/prometheus/: prometheus.yml
mosquitto/: mosquitto.conf
system/: settings.py
system/client/: brocker.py  broker.py  main.py
(+7 files in other folders)
