[tool.poetry]
name = "system"
version = "0.1.0"
description = ""
authors = ["merulis <merulis@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.6.0"
pydantic = "^2.9.2"
2captcha-python = "^1.5.0"
selenium = "^4.26.1"
celery = {extras = ["redis"], version = "^5.4.0"}
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
flower = "^2.0.1"
requests = "^2.32.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
